Scaling + Proportional editing doesn't work on dopesheet keyframes #60361

Closed
opened 2019-01-09 20:52:42 +01:00 by msalv · 5 comments

System Information
Windows 10 64, nvidia 1060eeeeeeee

Blender Version
Broken: In both 2.79 and 2.8

Short description of error
Using proportional editing and scaling (S) keyframes on the dopesheet scales the entire animation uniformly, instead of just the content within the radius, proportional to distance

Exact steps for others to reproduce the error
Open the blend file in 2.8 and move the selected keyframe in the dopesheet with G, it works. Scale with S, it doesn't work, even if you change the radius
bug5.blend

**System Information** Windows 10 64, nvidia 1060eeeeeeee **Blender Version** Broken: In both 2.79 and 2.8 **Short description of error** Using proportional editing and scaling (S) keyframes on the dopesheet scales the entire animation uniformly, instead of just the content within the radius, proportional to distance **Exact steps for others to reproduce the error** Open the blend file in 2.8 and move the selected keyframe in the dopesheet with G, it works. Scale with S, it doesn't work, even if you change the radius [bug5.blend](https://archive.blender.org/developer/F6233179/bug5.blend)
Author

Added subscriber: @moisessalvador

Added subscriber: @moisessalvador
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Philipp Oeser self-assigned this 2019-01-10 10:35:46 +01:00
Member

Confirmed, checking...

Confirmed, checking...

This issue was referenced by ba2b26af31

This issue was referenced by ba2b26af31ca7e1a8d547cf308be2c1afbe7a4f5
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#60361
No description provided.